# robot-comm

./: CMakeLists.txt  README.md
arduino/: dummy.ino  stop_arduino.sh  upload_to_arduino.sh  verify_sketch.sh
core/: Arduino.cpp  Arduino.h  BluetoothSocket.cpp  BluetoothSocket.h  Client.cpp  Client.h  IpSocket.cpp  Message.cpp  Message.h
include/: Arduino.h  BluetoothSocket.h  Client.h  Command.h  Error.h  IpSocket.h  Message.h  Order.h  Server.h  Socket.h  State.h  Update.h
msgs/: Command.cpp  Command.h  Error.cpp  Error.h  Inventory.cpp  Inventory.h  InventoryMsg.cpp  InventoryMsg.h  Locations.cpp  Locations.h  Order.cpp  Order.h  Update.cpp  Update.h
src/: Arduino.cpp  BluetoothSocket.cpp  Client.cpp  Command.cpp  Error.cpp  IpSocket.cpp  Message.cpp  Order.cpp  SerialTest.py  Server.cpp  Update.cpp
